tests/errors/compiler/no_main_in_program/no_main_in_program.c
int man()
{
	return 0;
}